# tg-agent-framework

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-16-hardening-design.md  2026-03-16-hardening-implementation.md  2026-03-16-memory-upgrade-design.md  2026-03-16-memory-upgrade-implementation.md  2026-03-18-starter-lifecycle-design.md  2026-03-18-starter-lifecycle-implementation.md
tests/: test_agent_bot.py  test_agent_runtime.py  test_config.py  test_graph_retries.py  test_graph_trimming.py  test_long_term_memory.py  test_markdown.py  test_memory_hardening.py  test_model_switch.py  test_public_api.py  test_runtime_backend_contract.py  test_runtime_store.py  test_security.py  test_sqlite_long_term_memory.py
tg_agent_framework/: __init__.py  __main__.py  config.py  events.py  graph.py  registry.py  scheduler.py  state.py
tg_agent_framework/bot/: agent_bot.py  auth.py  keyboards.py  markdown.py  types.py
tg_agent_framework/cli/: init.py
tg_agent_framework/memory/: base.py  checkpointer.py  null.py  runtime_backend.py  runtime_store.py  sqlite_memory.py  types.py
tg_agent_framework/tools/: security.py
