[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-agent-framework"
version = "0.1.0"
description = "Telegram + LangGraph Agent 快速开发框架"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "aiogram>=3.4",
    "paramiko>=3.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
tg-agent = "tg_agent_framework.cli.init:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["tg_agent_framework*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["tg_agent_framework"]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
pretty = true
